fixed 405 status on leave and added informational needs_password field on room schema
